--- a/R/Proba-V.Rmd
+++ b/R/Proba-V.Rmd
@@ -171,16 +171,35 @@ df_in <- getProbaVinfo(l0_dir, pattern = patterns, tiles = tiles)
 nrow(df_in)
 ```
 
+
+Next step is to keep the quality control values in the data which correspond to the QC_val as result of the 'getProbaVQClist' function. Lets test this on a single date/location. Select a RADIOMETRY.tif file from the downloaded data folder and assign it to a variable. 
+```{r}
+# Assign variable to the file.path
+r <- "/DATA/GEOTIFF/PROBAV_L3_S5_TOC_100M/20151021/PROBAV_S5_TOC_20151021_100M_V001/PROBAV_S5_TOC_X18Y02_20151021_100M_V001_NDVI.tif"
+# Assign a file.path (including filename) to which we will write the cleaned data.
+filename <- "/home/pi/PROBA_V/ProbaV_JD/rsdata/probav/sm2/PROBAV_S5_TOC_X18Y02_20151021_100M_V001.tif"
+
+cleanProbaV2(f_data = r, filename=filename, QC_val = QC_val, fill=255, datatype = type <- dataType(raster(r[1])), as.is = F, overwrite = F)
+
+
+```
+
+```{r, echo=F}
+# The result is a cleaned raster dataset (right) with only the quality control value (QC_val) selected. 
+par(mfrow = c(1, 2))
+plot(raster(r))
+plot(raster(filename))
+```
+
+
 ## Proccessing a ProbaV bath
 ```{r}
 # How many cores do we have:
 detectCores(all.tests = FALSE, logical = TRUE)
 
-# parallel with foreach
-#start_d = df_in$date[nrow(df_in)],
 # similar for NDVI
 processProbaVbatch2(l0_dir, 
-                    pattern = patterns, tiles = tiles, start_d = "2015-09-10",
+                    pattern = patterns, tiles = tiles, start_d = "2015-10-25",
                     QC_val = QC_val, outdir = file.path(paste0(getwd(),"/rsdata/probav/sm2", collapse ="")),
                     ncores = (detectCores(all.tests = FALSE, logical = TRUE)-1),
                     overwrite=F)
