--- a/R/Proba-V.Rmd
+++ b/R/Proba-V.Rmd
@@ -2,12 +2,16 @@
 title: "Proba-V"
 author: "Jorn D"
 date: "05-8-2016"
-Version: "0.3 (updated 7-9)"
+Version: "0.3 (updated 27-9)"
 output: html_document
 ---
 
-```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+
+#![WUR logo](http://www.wageningenur.nl/upload/f9a0b5f2-15c5-4b84-9e14-20ef02f5e265_wur-logo.png)
+
+```{r, echo=FALSE, message=FALSE}
+library(knitr)
+opts_chunk$set(fig.width=5, fig.align='center', fig.height=5, dpi=72)
 ```
 
 
@@ -45,7 +49,6 @@ library(gdalUtils)
 library(probaV)
 library(tools)
 library(parallel)
-library(knitr)
 library(zoo)
 
 ```
@@ -287,22 +290,28 @@ bands_sel <- paste(bands_select,'_sm.tif$', sep = "")
 # Here we change the QC_value to select all the cells, including the cloud values.
 # Write the clouds to a new directory, so it wont mess up the original file
 # Select one point in time, lets say: 2015-04-16
-cloud_dir <- "/rsdata/probav/sm_Withclouds"
 
+cloud_dir <- "rsdata/probav/sm_Withclouds"
+dir.create(file.path(cloud_dir), showWarnings = FALSE)
+
+# select dir with clouds
+probav_cloud_dir <- paste(getwd(),'/',cloud_dir, sep = "")
+```
+```{r, eval=F}
 # we wont use NDVI for the cloud filter in this example, just the radiometry is needed
 patterns <- c('RADIOMETRY.tif$')
 processProbaVbatch2(l0_dir, 
                     pattern = patterns, tiles = tiles, start_date = "2015-04-16", end_date = "2015-04-16",
-                    QC_val = 1:300, outdir = file.path(paste0(getwd(),cloud_dir, collapse ="")),
+                    QC_val = 1:255, outdir = file.path(paste0(getwd(),cloud_dir, collapse ="")),
                     ncores = (detectCores(all.tests = FALSE, logical = TRUE)-1),
                     overwrite=F)
 
+```
+```{r}
 # select dir with clouds
-probav_sm_dir <- "/home/pi/PROBA_V/ProbaV_JD/rsdata/probav/sm_Withclouds/"
-
+probav_cloud_dir <- paste(getwd(),'/',cloud_dir,'/', sep = "")
 # load the image in our virtual raster stack
-b_vrt <- timeVrtProbaV2(probav_sm_dir, pattern = bands_sel, vrt_name = vrt_name, tile = tiles, return_raster = T, start_date = "2015-04-16", end_date = "2015-04-16")
-df_probav_sm <- timeVrtProbaV2(probav_sm_dir, pattern = bands_sel, vrt_name = vrt_name, tile = tiles[tn], return_raster = F, start_date = "2015-04-16", end_date = "2015-04-16")
+b_vrt <- timeVrtProbaV2(probav_cloud_dir, pattern = bands_sel, vrt_name = vrt_name, tile = tiles, return_raster = T, start_date = "2015-04-16", end_date = "2015-04-16")
 
 # set extent
 xmin <- 5.996773
@@ -316,24 +325,96 @@ b_vrt_cloud <- crop(x = b_vrt, y = e)
 
 # plot a false color image
 plotRGB(b_vrt_cloud, 3, 2, 1, stretch='lin')
-
-# set variables
-# threshold for blue
-thresholds=c(-80, Inf)
-span = 0.3
-
-# set output filename
-out_name <- "/home/pi/PROBA_V/ProbaV_JD/rsdata/probav/metrics/cloud_filter.envi"
-out1 <- mcCalc(x=b_vrt, fun=cloud_filter, minrows = 15, mc.cores = mc.cores, logfile=logfile, out_name = out_name, overwrite = T, mc.preschedule = FALSE)
-
-
 ```
 
+Visualize the cloud detection method inbedded in the Proba-V data.
+```{r}
+# cloud mask SM
+bands_select <- '(BLUE|SWIR|NIR0)' 
+bands_sel <- paste(bands_select,'_sm.tif$', sep = "")
+
+# load the image in our virtual raster stack
+b_vrt_cloud_mask <- timeVrtProbaV2(probav_sm_dir, pattern = bands_sel, vrt_name = vrt_name, tile = tiles, return_raster = T, start_date = "2015-04-16", end_date = "2015-04-16")
+# crop image to previous determined extent
+b_vrt_cloud_mask <- crop(x = b_vrt_cloud_mask, y = e)
+# assign virtual raster stack to new variable
+r <- b_vrt_cloud_mask
+# copy data
+r2 <- r
+```
+
+all NA values in our raster(r) are in this scene cloud pixels. We assign a value (9999) to these cloud pixels in order to visualize them against our cloud filter function later on. 
+```{r}
+r2[is.na(r)] <- 9999
+r2[r2 < 9999] <- NA
+# Lets plot the original cloud detection method inbedded within the ProbaV data.
+r2 <- subset(r2,1)
+plot(r2, col = 'red', legend = F)
+```
+
+
+Apply cloud filter. In this example we use the blue band.
+```{r}
+bands_select <- '(BLUE)' 
+bands_sel <- paste(bands_select,'_sm.tif$', sep = "")
+# Select all dates of the blue band
+b_vrt <- timeVrtProbaV2(probav_sm_dir, pattern = bands_sel, vrt_name = vrt_name, tile = tiles, return_raster = T, start_date = "2014-03-06", end_date = "2015-12-06")
+df_probav_sm <- timeVrtProbaV2(probav_sm_dir, pattern = bands_sel, vrt_name = vrt_name, tile = tiles[tn], return_raster = F, start_date = "2014-03-06", end_date = "2015-12-06")
+out_name <- paste(getwd(),'/rsdata/probav/metrics/cloud_filter.envi', sep = "")
+```
+```{r, eval=F}
+# set variables
+# threshold for blue
+
+blue_c_filter <- mcCalc(x=b_vrt, fun=cloud_filter, minrows = 15, mc.cores = mc.cores, logfile=logfile, out_name = out_name, overwrite = T, mc.preschedule = FALSE)
+```
+
+
+Lets select the same data as our false colour image from the raster brick we just created. 
+```{r, eval=F}
+# select date
+blue_c_filter <- subset(blue_c_filter ,10)
+# crop the subset to the same extent as our false colour image
+blue_c_filter <- crop(x = blue_c_filter, y = e)
+```
+
+The cloud_filter function returns the Quality Control values. Meaning: "QC" is the status of observations: 0=Missing/band input QC, 1=good, 2=temporal outlier. Here we assign new values to our raster to viisualise what the SmoothLoes function detects by the extra clouds
+```{r, eval=F}
+# copy the data set
+blue_c_filter_copy <- blue_c_filter
+# assign values
+blue_c_filter[blue_c_filter_copy != 2] <- NA 
+blue_c_filter[blue_c_filter_copy == 2] <- 1
+```
+```{r, results='hide'}
+blue_c_filter <- raster(paste(getwd(),'/rsdata/probav/cloudfilter/cloudfilter.tif', sep = ""))
+```
+```{r}
+plot(blue_c_filter, col = 'darkred', legend = F)
+```
+
+
+Lets plots the original false colour again against the 2 cloud filters
+```{r}
+# data copy
+r3 <- r2
+
+r3[blue_c_filter == 1] <- 1
+breakpoints <- c(0,2,9999)
+colors <- c("darkred","red")
+par(mfrow=c(1,3))
+plotRGB(b_vrt_cloud, 3, 2, 1, stretch='lin')
+plotRGB(b_vrt_cloud, 3, 2, 1, stretch='lin')
+plot(r2, col = 'red', legend = F, add = T)
+plotRGB(b_vrt_cloud, 3, 2, 1, stretch='lin')
+plot(r3,breaks=breakpoints,col=colors, add = T, legend = F)
+par(mfrow=c(1,1))
+```
 
 
 ## check layers, bands, blocks and cores
 
-```{r}
+```{r,eval=F}
 # --- get metrics ---  #
 cat(sprintf("\nlayers: %i  | bands: %s  | blocks: %i  | cores: %i\n",
             nrow(df_probav_sm), paste0(bands, collapse = " "),
@@ -342,7 +423,7 @@ cat(sprintf("\nlayers: %i  | bands: %s  | blocks: %i  | cores: %i\n",
 
 
 ## create time series using zoo
-```{r}
+```{r,eval=F}
 # Select first pixel of our raster stack
 z <- zoo(c(b_vrt[1]), getZ(b_vrt))
 
@@ -352,14 +433,14 @@ plot(f)
 ```
 
 ## get metrics from smoothloes cleaned data
-```{r}
+```{r,eval=F}
 d <- getHarmMetrics(f$x,QC_good = f$QC_good ,dates = dates, sig = .95, order = 1)
 d
 ```
 
 
 ## Run metrics with a raster output
-```{r}
+```{r, eval=F}
 # No scale
 b_metrics <- getHarmMetricsSpatial_JE(x = b_vrt, minrows = minrows, mc.cores = mc.cores, logfile=logfile,
                                       overwrite=T, span=0.3,
@@ -370,7 +451,7 @@ b_metrics <- getHarmMetricsSpatial_JE(x = b_vrt, minrows = minrows, mc.cores = m
 
 ## plot the metrics
 
-```{r}
+```{r,eval=F}
 # metrics info
 b_metrics
 
